fixed overflow in top history box

--- a/plug_essential.css
+++ b/plug_essential.css
@@ -174,6 +174,7 @@
     height: 80px;
     position: absolute;
     background-color: rgba(30, 30, 30, .3);
+    overflow-x: hidden;
 }
 
 #pe_top-history-image {
